--- a/index.html
+++ b/index.html
@@ -1,48 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-        main {
-            flex: 1;
-            padding: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Colorful Web Interface</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: linear-gradient(135deg, #ff6b6b, #ffcc80);
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+    }
+
+    .screen {
+      background: white;
+      width: 400px;
+      height: 300px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+      padding: 16px;
+    }
+
+    .header {
+      display: flex;
+      gap: 8px;
+    }
+
+    .circle {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+    }
+
+    .circle.red {
+      background: #ff4d4d;
+    }
+
+    .circle.yellow {
+      background: #ffd633;
+    }
+
+    .circle.green {
+      background: #4caf50;
+    }
+
+    .content {
+      margin-top: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .video-section {
+      background: #cce7ff;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 8px;
+    }
+
+    .play-button {
+      font-size: 32px;
+      color: white;
+      background: #007bff;
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .widgets {
+      display: flex;
+      gap: 8px;
+    }
+
+    .widget {
+      width: 48px;
+      height: 48px;
+      border-radius: 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .widget.like {
+      background: #4caf50;
+    }
+
+    .widget.heart {
+      background: #ff4d4d;
+    }
+
+    .cards {
+      display: flex;
+      gap: 8px;
+    }
+
+    .card {
+      background: #f1f1f1;
+      border-radius: 8px;
+      flex: 1;
+      height: 48px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .decorations {
+      position: absolute;
+      bottom: -40px;
+      display: flex;
+      gap: 16px;
+      align-items: flex-end;
+    }
+
+    .spring {
+      width: 24px;
+      height: 24px;
+      border: 2px solid white;
+      border-radius: 50%;
+      box-shadow: 0 0 0 4px #ff4d4d, 0 0 0 8px white;
+    }
+
+    .plant {
+      position: relative;
+      width: 24px;
+      height: 48px;
+      background: #4caf50;
+      border-radius: 0 0 16px 16px;
+    }
+
+    .leaf {
+      position: absolute;
+      top: -16px;
+      left: 4px;
+      width: 16px;
+      height: 16px;
+      background: #4caf50;
+      transform: rotate(45deg);
+      border-radius: 50%;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Web Page</h1>
-    </header>
-    <main>
-        <p>This is the main content of the page.</p>
-    </main>
-    <footer>
-        <p>&copy; 2023 My Web Page. All rights reserved.</p>
-    </footer>
+  <div class="container">
+    <div class="screen">
+      <div class="header">
+        <div class="circle red"></div>
+        <div class="circle yellow"></div>
+        <div class="circle green"></div>
+      </div>
+      <div class="content">
+        <div class="video-section">
+          <div class="play-button">▶</div>
+        </div>
+        <div class="widgets">
+          <div class="widget like"><span>👍</span></div>
+          <div class="widget heart"><span>❤️</span></div>
+        </div>
+        <div class="cards">
+          <div class="card">Card 1</div>
+          <div class="card">Card 2</div>
+        </div>
+      </div>
+    </div>
+    <div class="decorations">
+      <div class="spring"></div>
+      <div class="plant">
+        <div class="leaf"></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
