--- a/index.html
+++ b/index.html
@@ -1,192 +1,464 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colorful Web Interface</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(135deg, #ff6b6b, #ffcc80);
-    }
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>3D Image Slideshow Example</title>
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
-    }
+    <meta name="author" content="Codeconvey" />
 
-    .screen {
-      background: white;
-      width: 400px;
-      height: 300px;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-      padding: 16px;
-    }
+    <!-- Internal CSS -->
+    <style>
+        /* ******************************************************
+        Author URI: https://codeconvey.com/
+        Demo Purpose Only - May not require to add.
+        font-family: "Raleway",sans-serif;
+        *********************************************************/
 
-    .header {
-      display: flex;
-      gap: 8px;
-    }
+        @import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900');
 
-    .circle {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-    }
+        html {
+            box-sizing: border-box;
+        }
 
-    .circle.red {
-      background: #ff4d4d;
-    }
+        *, *:before, *:after {
+            box-sizing: inherit;
+        }
 
-    .circle.yellow {
-      background: #ffd633;
-    }
+        article, header, section, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+            display: block;
+        }
 
-    .circle.green {
-      background: #4caf50;
-    }
+        body {
+            background: #dedede none repeat scroll 0 0;
+            color: #222;
+            font-size: 100%;
+            line-height: 24px;
+            margin: 0;
+            padding: 0;
+            font-family: "Raleway", sans-serif;
+            animation: backgroundAnimation 10s infinite alternate; /* Background animation */
+        }
 
-    .content {
-      margin-top: 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
+        @keyframes backgroundAnimation {
+            0% { background-color: #dedede; }
+            100% { background-color: #f0f0f0; }
+        }
 
-    .video-section {
-      background: #cce7ff;
-      height: 120px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 8px;
-    }
+        a {
+            font-family: "Raleway", sans-serif;
+            text-decoration: none;
+            outline: none;
+        }
 
-    .play-button {
-      font-size: 32px;
-      color: white;
-      background: #007bff;
-      border-radius: 50%;
-      width: 48px;
-      height: 48px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-    }
+        a:hover, a:focus {
+            color: #373e18;
+        }
 
-    .widgets {
-      display: flex;
-      gap: 8px;
-    }
+        section {
+            float: left;
+            width: 100%;
+            padding-bottom: 3em;
+        }
 
-    .widget {
-      width: 48px;
-      height: 48px;
-      border-radius: 8px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
-      color: white;
-      cursor: pointer;
-    }
+        h2 {
+            color: #1a0e0e;
+            font-size: 26px;
+            font-weight: 700;
+            margin: 0;
+            line-height: normal;
+            text-transform: uppercase;
+        }
 
-    .widget.like {
-      background: #4caf50;
-    }
+        h2 span {
+            display: block;
+            padding: 0;
+            font-size: 18px;
+            opacity: 0.7;
+            margin-top: 5px;
+            text-transform: uppercase;
+        }
 
-    .widget.heart {
-      background: #ff4d4d;
-    }
+        #float-right {
+            float: right;    
+        }
 
-    .cards {
-      display: flex;
-      gap: 8px;
-    }
+        /* ******************************************************
+        Script Top
+        *********************************************************/
 
-    .card {
-      background: #f1f1f1;
-      border-radius: 8px;
-      flex: 1;
-      height: 48px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+        .ScriptTop {
+            background: #fff none repeat scroll 0 0;
+            float: left;
+            font-size: 0.69em;
+            font-weight: 600;
+            line-height: 2.2;
+            padding: 12px 0;
+            text-transform: uppercase;
+            width: 100%;
+        }
 
-    .decorations {
-      position: absolute;
-      bottom: -40px;
-      display: flex;
-      gap: 16px;
-      align-items: flex-end;
-    }
+        .ScriptTop ul {
+            margin: 24px 0;
+            padding: 0;
+            text-align: left;
+        }
 
-    .spring {
-      width: 24px;
-      height: 24px;
-      border: 2px solid white;
-      border-radius: 50%;
-      box-shadow: 0 0 0 4px #ff4d4d, 0 0 0 8px white;
-    }
+        .ScriptTop li {
+            list-style: none;    
+            display: inline-block;
+        }
 
-    .plant {
-      position: relative;
-      width: 24px;
-      height: 48px;
-      background: #4caf50;
-      border-radius: 0 0 16px 16px;
-    }
+        .ScriptTop li a {
+            background: #6a4aed none repeat scroll 0 0;
+            color: #fff;
+            display: inline-block;
+            font-size: 14px;
+            font-weight: 600;
+            padding: 5px 18px;
+            text-decoration: none;
+            text-transform: capitalize;
+        }
 
-    .leaf {
-      position: absolute;
-      top: -16px;
-      left: 4px;
-      width: 16px;
-      height: 16px;
-      background: #4caf50;
-      transform: rotate(45deg);
-      border-radius: 50%;
-    }
-  </style>
+        .ScriptTop li a:hover {
+            background: #000;
+            color: #fff;
+        }
+
+        /* ******************************************************
+        Script Header
+        *********************************************************/
+
+        .ScriptHeader {
+            float: left;
+            width: 100%;
+            padding: 2em 0;
+        }
+
+        .rt-heading {
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .Scriptcontent {
+            line-height: 28px;    
+        }
+
+        .ScriptHeader h1 {
+            font-family: "brandon-grotesque", "Brandon Grotesque", "Source Sans Pro", "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            color: #6a4aed;
+            font-size: 26px;
+            font-weight: 700;
+            margin: 0;
+            line-height: normal;
+        }
+
+        .ScriptHeader h2 {
+            color: #312c8f;
+            font-size: 20px;
+            font-weight: 400;
+            margin: 5px 0 0;
+            line-height: normal;
+        }
+
+        .ScriptHeader h1 span {
+            display: block;
+            padding: 0;
+            font-size: 22px;
+            opacity: 0.7;
+            margin-top: 5px;
+        }
+
+        .ScriptHeader span {
+            display: block;
+            padding: 0;
+            font-size: 22px;
+            opacity: 0.7;
+            margin-top: 5px;
+        }
+
+        /* ******************************************************
+        Live Demo
+        *********************************************************/
+
+        /* ******************************************************
+        Responsive Grids
+        *********************************************************/
+
+        .rt-container {
+            margin: 0 auto;
+            padding-left: 12px;
+            padding-right: 12px;
+        }
+
+        .rt-row:before, .rt-row:after {
+            display: table;
+            line-height: 0;
+            content: "";
+        }
+
+        .rt-row:after {
+            clear: both;
+        }
+
+        [class^="col-rt-"] {
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -o-box-sizing: border-box;
+            -ms-box-sizing: border-box;
+            padding: 0 15px;
+            min-height: 1px;
+            position: relative;
+        }
+
+        @media (min-width: 768px) {
+            .rt-container {
+                width: 750px;
+            }
+
+            [class^="col-rt-"] {
+                float: left;
+                width: 49.9999999999%;
+            }
+
+            .col-rt-6, .col-rt-12 {
+                width: 100%;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .rt-container {
+                width: 1170px;
+            }
+
+            .col-rt-1 {
+                width: 16.6%;
+            }
+
+            .col-rt-2 {
+                width: 30.33%;
+            }
+
+            .col-rt-3 {
+                width: 50%;
+            }
+
+            .col-rt-4 {
+                width: 67.664%;
+            }
+
+            .col-rt-5 {
+                width: 83.33%;
+            }
+        }
+
+        @media only screen and (min-width: 240px) and (max-width: 768px) {
+            .ScriptTop h1, .ScriptTop ul {
+                text-align: center;
+            }
+
+            .ScriptTop h1 {
+                margin-top: 0;
+                margin-bottom: 15px;
+            }
+
+            .ScriptTop ul {
+                margin-top: 12px;        
+            }
+
+            .ScriptHeader h1,
+            .ScriptHeader h2, 
+            .scriptnav ul {
+                text-align: center;    
+            }
+
+            .scriptnav ul {
+                margin-top: 12px;        
+            }
+
+            #float-right {
+                float: none;    
+            }
+        }
+
+        /* ******************************************************
+        3D Slideshow Styles
+        *********************************************************/
+
+        .slideshow {
+            margin: 0 auto;
+            padding-top: 50px;
+            height: 700px;
+            perspective: 1000px;
+        }
+
+        .content {
+            margin: auto;
+            width: 150px;
+            perspective: 1000px;
+            position: relative;
+            padding-top: 80px;
+            transform-style: preserve-3d;
+        }
+
+        .slider-content {
+            width: 100%;
+            position: absolute;
+            float: right;
+            animation: rotate 15s infinite linear;
+            transform-style: preserve-3d;
+        }
+
+        .slider-content:hover {
+            cursor: pointer;
+            animation-play-state: paused;
+        }
+
+        .slider-content figure {
+            width: 180px;
+            height: 120px;
+            border: 1px solid #555;
+            overflow: hidden;
+            position: absolute;
+        }
+
+        .slider-content figure:nth-child(1) {
+            transform: rotateY(0deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(2) {
+            transform: rotateY(40deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(3) {
+            transform: rotateY(80deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(4) {
+            transform: rotateY(120deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(5) {
+            transform: rotateY(160deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(6) {
+            transform: rotateY(200deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(7) {
+            transform: rotateY(240deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(8) {
+            transform: rotateY(280deg) translateZ(300px);
+        }
+
+        .slider-content figure:nth-child(9) {
+            transform: rotateY(320deg) translateZ(300px);
+        }
+
+        .shadow {
+            position: absolute;
+            box-shadow: 0px 0px 0px #000;
+        }
+
+        .slider-content img {
+            image-rendering: auto;
+            transition: all 300ms;
+            width: 100%;
+            height: 100%;
+        }
+
+        .slider-content img:hover {
+            transform: scale(1.2);
+            transition: all 300ms;
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotateY(0deg);
+            }
+            to {
+                transform: rotateY(360deg);
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="screen">
-      <div class="header">
-        <div class="circle red"></div>
-        <div class="circle yellow"></div>
-        <div class="circle green"></div>
-      </div>
-      <div class="content">
-        <div class="video-section">
-          <div class="play-button">▶</div>
+    <div class="ScriptTop">
+        <div class="rt-container">
+            <div class="col-rt-4" id="float-right">
+                <!-- Ad Here -->
+            </div>
+            <div class="col-rt-2">
+                <ul>
+                    <!-- <li><a href="https://codeconvey.com/3d-images-slideshow-using-html-and-css" title="Back to tutorial page">Back to Tutorial</a></li> -->
+                </ul>
+            </div>
         </div>
-        <div class="widgets">
-          <div class="widget like"><span>👍</span></div>
-          <div class="widget heart"><span>❤️</span></div>
-        </div>
-        <div class="cards">
-          <div class="card">Card 1</div>
-          <div class="card">Card 2</div>
-        </div>
-      </div>
     </div>
-    <div class="decorations">
-      <div class="spring"></div>
-      <div class="plant">
-        <div class="leaf"></div>
-      </div>
-    </div>
-  </div>
+
+    <header class="ScriptHeader">
+        <div class="rt-container">
+            <div class="col-rt-12">
+                <div class="rt-heading">
+                    <h1>SiRJi TUSI GREATE HO TOFU KUBUL KAROO</h1>
+                    <p>MEMORY GALARY.</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section>
+        <div class="rt-container">
+            <div class="col-rt-12">
+                <div class="Scriptcontent">
+                    <!-- 3D Image Slideshow HTML -->
+                    <section class="slideshow">
+                        <div class="content">
+                            <div class="slider-content">
+                                <figure class="shadow"> 
+                                    <img src="./20241211_170745.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./20241030_174627.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./20241204_181125.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./20241206_170951.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./20241210_174840.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./IMG-20241010-WA0005.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./IMG-20241010-WA0021.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./20241210_174834.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./Screenshot_20250106-171547_Facebook.jpg">
+                                </figure>
+                                <figure class="shadow">
+                                    <img src="./Screenshot_20250106-171547_Facebook.jpg"> <!-- Placeholder Image -->
+                                </figure>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- End 3D Image Slideshow HTML -->
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
