--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
             display: block;
         }
 
+        /* Updated body style with background image */
         body {
-            background: #dedede none repeat scroll 0 0;
+            background: url('000.jpg') no-repeat center center fixed; 
+            background-size: cover;
             color: #222;
             font-size: 100%;
             line-height: 24px;
             margin: 0;
             padding: 0;
             font-family: "Raleway", sans-serif;
-            animation: backgroundAnimation 10s infinite alternate; /* Background animation */
+            animation: backgroundAnimation 10s infinite alternate;
         }
 
         @keyframes backgroundAnimation {
@@ -82,48 +84,6 @@
 
         #float-right {
             float: right;    
-        }
-
-        /* ******************************************************
-        Script Top
-        *********************************************************/
-
-        .ScriptTop {
-            background: #fff none repeat scroll 0 0;
-            float: left;
-            font-size: 0.69em;
-            font-weight: 600;
-            line-height: 2.2;
-            padding: 12px 0;
-            text-transform: uppercase;
-            width: 100%;
-        }
-
-        .ScriptTop ul {
-            margin: 24px 0;
-            padding: 0;
-            text-align: left;
-        }
-
-        .ScriptTop li {
-            list-style: none;    
-            display: inline-block;
-        }
-
-        .ScriptTop li a {
-            background: #6a4aed none repeat scroll 0 0;
-            color: #fff;
-            display: inline-block;
-            font-size: 14px;
-            font-weight: 600;
-            padding: 5px 18px;
-            text-decoration: none;
-            text-transform: capitalize;
-        }
-
-        .ScriptTop li a:hover {
-            background: #000;
-            color: #fff;
         }
 
         /* ******************************************************
@@ -183,107 +143,6 @@
         /* ******************************************************
         Live Demo
         *********************************************************/
-
-        /* ******************************************************
-        Responsive Grids
-        *********************************************************/
-
-        .rt-container {
-            margin: 0 auto;
-            padding-left: 12px;
-            padding-right: 12px;
-        }
-
-        .rt-row:before, .rt-row:after {
-            display: table;
-            line-height: 0;
-            content: "";
-        }
-
-        .rt-row:after {
-            clear: both;
-        }
-
-        [class^="col-rt-"] {
-            box-sizing: border-box;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            -o-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            padding: 0 15px;
-            min-height: 1px;
-            position: relative;
-        }
-
-        @media (min-width: 768px) {
-            .rt-container {
-                width: 750px;
-            }
-
-            [class^="col-rt-"] {
-                float: left;
-                width: 49.9999999999%;
-            }
-
-            .col-rt-6, .col-rt-12 {
-                width: 100%;
-            }
-        }
-
-        @media (min-width: 1200px) {
-            .rt-container {
-                width: 1170px;
-            }
-
-            .col-rt-1 {
-                width: 16.6%;
-            }
-
-            .col-rt-2 {
-                width: 30.33%;
-            }
-
-            .col-rt-3 {
-                width: 50%;
-            }
-
-            .col-rt-4 {
-                width: 67.664%;
-            }
-
-            .col-rt-5 {
-                width: 83.33%;
-            }
-        }
-
-        @media only screen and (min-width: 240px) and (max-width: 768px) {
-            .ScriptTop h1, .ScriptTop ul {
-                text-align: center;
-            }
-
-            .ScriptTop h1 {
-                margin-top: 0;
-                margin-bottom: 15px;
-            }
-
-            .ScriptTop ul {
-                margin-top: 12px;        
-            }
-
-            .ScriptHeader h1,
-            .ScriptHeader h2, 
-            .scriptnav ul {
-                text-align: center;    
-            }
-
-            .scriptnav ul {
-                margin-top: 12px;        
-            }
-
-            #float-right {
-                float: none;    
-            }
-        }
 
         /* ******************************************************
         3D Slideshow Styles
@@ -387,22 +246,28 @@
                 transform: rotateY(360deg);
             }
         }
+
+        /* Music On/Off Button Style */
+        .music-button {
+            background-color: #6a4aed;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+        }
+
+        .music-button:hover {
+            background-color: #000;
+        }
+
     </style>
 </head>
 <body>
-    <div class="ScriptTop">
-        <div class="rt-container">
-            <div class="col-rt-4" id="float-right">
-                <!-- Ad Here -->
-            </div>
-            <div class="col-rt-2">
-                <ul>
-                    <!-- <li><a href="https://codeconvey.com/3d-images-slideshow-using-html-and-css" title="Back to tutorial page">Back to Tutorial</a></li> -->
-                </ul>
-            </div>
-        </div>
-    </div>
-
     <header class="ScriptHeader">
         <div class="rt-container">
             <div class="col-rt-12">
@@ -423,22 +288,22 @@
                         <div class="content">
                             <div class="slider-content">
                                 <figure class="shadow"> 
-                                    <img src="./20241211_170745.jpg">
+                                    <img src="./Screenshot_20250115-000640_Instagram.jpg">
                                 </figure>
                                 <figure class="shadow">
-                                    <img src="./20241030_174627.jpg">
+                                    <img src="./Screenshot_20250106-171633_Facebook.jpg">
                                 </figure>
                                 <figure class="shadow">
-                                    <img src="./20241204_181125.jpg">
+                                    <img src="./Screenshot_20250106-171624_Facebook.jpg">
                                 </figure>
                                 <figure class="shadow">
-                                    <img src="./20241206_170951.jpg">
+                                    <img src="./Screenshot_20250106-171547_Facebook.jpg">
                                 </figure>
                                 <figure class="shadow">
                                     <img src="./20241210_174840.jpg">
                                 </figure>
                                 <figure class="shadow">
-                                    <img src="./IMG-20241010-WA0005.jpg">
+                                    <img src="./666.jpg">
                                 </figure>
                                 <figure class="shadow">
                                     <img src="./IMG-20241010-WA0021.jpg">
@@ -460,5 +325,27 @@
             </div>
         </div>
     </section>
+
+    <!-- Audio Player and Toggle Button -->
+    <audio id="bg-music" loop>
+        <source src="ff.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+    <button class="music-button" onclick="toggleMusic()">Music On</button>
+
+    <script>
+        let music = document.getElementById("bg-music");
+        let musicButton = document.querySelector(".music-button");
+
+        function toggleMusic() {
+            if (music.paused) {
+                music.play();
+                musicButton.textContent = "Music Off";
+            } else {
+                music.pause();
+                musicButton.textContent = "Music On";
+            }
+        }
+    </script>
 </body>
 </html>
