--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
         <div class="rt-container">
             <div class="col-rt-12">
                 <div class="rt-heading">
-                    <h1>SiRJi TUSI GREATE HO TOFU KUBUL KAROO</h1>
-                    <p>MEMORY GALARY.</p>
+                    <h1>🫡 SiRJi TUSI GREATE HO 🙇‍♂️</h1>
+                    <p>MEMORY GALARY</p>
                 </div>
             </div>
         </div>
